# trackr

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/workflows/: coverage.yml  deploy.yml
migrations/versions/: 7c9acd8fcf7f_.py  f2c74ea27a1e_.py
tests/: conftest.py
tests/functional/: test_items.py
tests/unit/: test_models.py
trackr/: __init__.py  db.py  errors.py  items.py  models.py
trackr/items/: __init__.py  forms.py  routes.py
trackr/items/templates/items/: delete.html  get.html  save.html
trackr/templates/: base.html  error.html
trackr/templates/items/: get.html  index.html
