[tool.poetry]
name = "trackr"
version = "0.1.0"
description = "Shopify Back-End Dev Intern Challenge Fall 2022 Submission"
authors = ["Antoinette Lee"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
