[tool.poetry]
name = "trackr"
version = "0.1.0"
description = "Shopify Back-End Dev Intern Challenge Fall 2022 Submission"
authors = ["Antoinette Lee"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
psycopg2-binary = "^2.9.3"
Flask-WTF = "^1.0.1"
gunicorn = "^20.1.0"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
